--- a/App1/App1/MainPage.xaml
+++ b/App1/App1/MainPage.xaml
@@ -3,9 +3,14 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:local="clr-namespace:App1"
              x:Class="App1.MainPage">
-
-	<Label Text="Welcome to Xamarin Forms!" 
-           VerticalOptions="Center" 
-           HorizontalOptions="Center" />
+    <ContentPage.Content>
+        <StackLayout Padding="5,10">
+            <Label TextColor="#F44336" VerticalOptions="Center" HorizontalOptions="Center" FontSize = "30" Text="PALINDROM" />
+            <Entry x:Name="Input"  Placeholder=" write palindrom"  />
+            <Button x:Name="Buton" Text="Klik me!" BackgroundColor="#F44336" Opacity="0.9" Clicked="OnButtonClicked"  />
+            <Label x:Name="Result" TextColor="#F44336" VerticalOptions="Center" HorizontalOptions="Center" FontSize = "20" Text=""  />
+        </StackLayout>
+    </ContentPage.Content>
+	
 
 </ContentPage>
